--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>shared</module>
         <module>jedis</module>
         <module>mongo</module>
+        <module>sql</module>
     </modules>
 
     <dependencies>
@@ -32,7 +33,6 @@
             <artifactId>gson</artifactId>
             <version>2.8.1</version>
         </dependency>
-
     </dependencies>
 
 </project>
